cmake_minimum_required(VERSION 2.6)
set(STROPT_VERSION_STRING 0.0.1)
set(STROPT_VERSION_MAJOR 0)
add_definitions(-D_GNU_SOURCE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(HEADERS_INSTALL_PATH ${CMAKE_INSTALL_PREFIX}/include)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

set(STROPT_SOURCES stropt.c)
add_library(stropt SHARED ${STROPT_SOURCES})

set_target_properties(stropt PROPERTIES VERSION ${STROPT_VERSION_STRING}
        SOVERSION ${STROPT_VERSION_MAJOR})

install(TARGETS stropt LIBRARY DESTINATION lib)
install(FILES stropt.h DESTINATION ${HEADERS_INSTALL_PATH})
